--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,18 +1,35 @@
+
+/* ------------------------------------------------------- */
+/* Fonts */
+/* ------------------------------------------------------- */
+
 @font-face {
     font-family: 'Gotham';
-    src: url('Gotham-Light.woff2') format('woff2'),
-        url('Gotham-Light.woff') format('woff');
+    src: url('fonts/Gotham-Light.woff2') format('woff2'),
+        url('fonts/Gotham-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Gotham Book';
-    src: url('Gotham-Book.woff2') format('woff2'),
-        url('Gotham-Book.woff') format('woff');
+    src: url('fonts/Gotham-Book.woff2') format('woff2'),
+        url('fonts/Gotham-Book.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Gotham';
+    src: url('fonts/Gotham-Medium.woff2') format('woff2'),
+        url('fonts/Gotham-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+
+/* ------------------------------------------------------- */
+/* Global Styles */
+/* ------------------------------------------------------- */
 
 * {
   margin: 0;
@@ -41,7 +58,7 @@ h3 {
   margin: 0 auto;
   text-align: center;
   font-size: 1.2em;
-  font-weight: 200;
+  font-weight: 300;
 }
 
 img {
@@ -49,7 +66,6 @@ img {
   opacity: 1;
   transition: opacity 1s;
 }
-
 
 ul {
   list-style-type: none;
@@ -59,9 +75,14 @@ ul {
   margin-top: 20px;
 }
 
+/* Wow.js init */
 .wow {
   visibility: hidden;
 }
+
+/* ------------------------------------------------------- */
+/* Navigation Bar */
+/* ------------------------------------------------------- */
 
 .navbar {
   width: 64px;
@@ -71,7 +92,6 @@ ul {
   left: 0;
   z-index: 100;
 }
-
 
 .logo {
   color: #191919;
@@ -108,6 +128,10 @@ ul {
   transition: opacity 0.3s;
 }
 
+/* ------------------------------------------------------- */
+/* Landing Section */
+/* ------------------------------------------------------- */
+
 .hero {
   margin: 0;
   width: 100vw;
@@ -116,8 +140,6 @@ ul {
 
 .hero > * {
   position: absolute;
-  /* Not using this line, no noticable change  */
-  /* color: rgba(255, 255, 255, 0.25) */
 }
 
 .contact {
@@ -148,22 +170,22 @@ ul {
 
 .info > h1, .info > h3 {
   text-align: left;
-  font-weight: 400;
 }
 
 .bio {
   display: block;
   font-size: 1.3em;
   line-height: 1.8em;
-  font-weight: 300;
   color: #fff;
 }
 
+/* ------------------------------------------------------- */
 /* About */
+/* ------------------------------------------------------- */
 
 .about {
   background-color: #191919;
-  height: 90vh;
+  height: 105vh;
   width: 100vw;
   color: #fff;
 }
@@ -171,6 +193,8 @@ ul {
 .about > h2 {
   top: 18vh;
   left: 12vw;
+  font-weight: 300;
+  font-size: 56px;
   position: relative;
   color: #fff;
   display: inline-block;
@@ -207,9 +231,9 @@ ul {
   transition: color 0.4s;
 }
 
-
-
+/* ------------------------------------------------------- */
 /* Capabilities */
+/* ------------------------------------------------------- */
 
 .capabilities {
   line-height: 1em;
@@ -234,7 +258,7 @@ ul {
 }
 
 .capabilities > h3 {
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .strategy-design-tech {
@@ -293,13 +317,17 @@ ul {
   color: gray;
 }
 
+/* ------------------------------------------------------- */
+/* Case Studies */
+/* ------------------------------------------------------- */
+
 .case_studies {
   background-color: #F7F7F9;
   text-align: center;
   padding-top: 100px;
 }
 
-.case_studies > h3, h3 {
+.case_studies > h3 {
   font-weight: 400;
 }
 
@@ -372,6 +400,10 @@ ul {
   transition: opacity 0.3s;
 }
 
+/* ------------------------------------------------------- */
+/* Clients */
+/* ------------------------------------------------------- */
+
 .clients {
   margin: 0 auto;
   padding-top: 50px;
@@ -414,6 +446,10 @@ ul {
   filter: grayscale(100%)	contrast(0%) brightness(100%);
   transition: 0.5s;
 }
+
+/* ------------------------------------------------------- */
+/* Sub footer */
+/* ------------------------------------------------------- */
 
 .new-project {
   background-color: #1F2020;
@@ -464,6 +500,10 @@ button:hover {
   transition: opacity 0.3s;
 }
 
+/* ------------------------------------------------------- */
+/* Footer */
+/* ------------------------------------------------------- */
+
 footer {
   background-color: #1B1C1C;
   /* width: 100%; */
@@ -503,6 +543,10 @@ li > a > img:hover {
   opacity: 0.5;
   transition: opacity 1s;
 }
+
+/* ------------------------------------------------------- */
+/* Media Query */
+/* ------------------------------------------------------- */
 
 @media screen and (max-width: 768px) {
   .hero {
