--- a/assets/styles.css
+++ b/assets/styles.css
@@ -242,7 +242,7 @@ h1 {
 .capabilities {
   line-height: 1em;
   font-weight: 500;
-  height: 102vh;
+  height: 300vh;
   background-color: #ffffff;
 }
 
@@ -322,89 +322,6 @@ h1 {
 }
 
 /* ------------------------------------------------------- */
-/* Case Studies */
-/* ------------------------------------------------------- */
-
-.case_studies {
-  background-color: #F7F7F9;
-  text-align: center;
-  padding-top: 100px;
-}
-
-.case_studies > h3 {
-  font-weight: 400;
-}
-
-.case_info {
-  text-align: center;
-  display: inline-block;
-  margin: 0 auto;
-  color: grey;
-  font-size: 1.2em;
-}
-
-.case_title {
-  padding-top: 30px;
-  font-weight: 400;
-}
-
-.cases {
-  margin-top: 50px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.cases > div {
-  margin: 0 25px;
-}
-
-.case_1 > a, .case_2 > a {
-  padding-bottom: 0;
-  transition: 1s;
-}
-
-.case_1 > a:hover, .case_2 > a:hover {
-  width: 100%;
-  background: #fff;
-  cursor: pointer;
-  opacity: 0.5;
-  transition: 1s
-}
-
-.case_1 {
-  grid-column-start: 1;
-  margin: 0 auto;
-}
-
-.case_2 {
-  grid-column-start: 2;
-  margin: 0 auto;
-}
-
-.small_text {
-  font-size: 0.8em;
-  color: grey;
-  display: inline-block;
-  margin-top: 10px;
-}
-
-.see_more {
-  display: inline-block;
-  margin: 50px auto 100px;
-  font-size: 1.2em;
-  color: #000;
-  line-height: 1.8em;
-  border-bottom: 1px solid #ddd;
-  opacity: 1;
-  transition: opacity 1s;
-}
-
-.see_more:hover {
-  opacity: 0.4;
-  transition: opacity 0.3s;
-}
-
-/* ------------------------------------------------------- */
 /* Clients */
 /* ------------------------------------------------------- */
 
@@ -452,56 +369,12 @@ h1 {
 }
 
 /* ------------------------------------------------------- */
-/* Sub footer */
+/* Quick Note */
 /* ------------------------------------------------------- */
 
-.new-project {
-  background-color: #1F2020;
-  width: 100%;
-  height: 175px;
-  padding-top: 60px;
-  position: relative;
-}
-
-.start-new-project {
-  color: white;
-  font-weight: 400;
-  font-size: 1.5em;
-  letter-spacing: 0;
-  text-align: left;
-  left: 12vw;
-  top: 9.5vh;
-  position: absolute;
-}
-
-.new-project-info {
-  color: gray;
-  left: 12vw;
-  top: 20vh;
-  position: absolute;
-}
-
-button {
-  color: white;
-  font-weight: 700;
-  font-size: 0.8em;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-  background-color: #3A89DA;
-  padding: 14px 20px;
-  border-radius: 3px;
-  border: #3A89DA;
-  position: absolute;
-  top: 8.5vh;
-  right: 12vw;
-  cursor: pointer;
-  opacity: 1;
-  transition: opacity 0.3s;
-}
-
-button:hover {
-  opacity: 0.5;
-  transition: opacity 0.3s;
+.quicknote {
+  height: 100vh;
+  background-color: #191919;
 }
 
 /* ------------------------------------------------------- */
@@ -510,8 +383,7 @@ button:hover {
 
 footer {
   background-color: #1B1C1C;
-  /* width: 100%; */
-  height: 80px;
+  height: 25vh;
   padding-top: 75px;
   position: relative;
   display: flex;
