--- a/assets/styles.css
+++ b/assets/styles.css
@@ -43,10 +43,6 @@ a {
   color: #fff;
 }
 
-h2 {
-  font-size: 1.8em;
-}
-
 h3 {
   margin: 0 auto;
   font-size: 1.2em;
@@ -194,14 +190,16 @@ h1 {
   color: #fff;
 }
 
-.about > h2 {
+.section-title {
   top: 18vh;
   left: 12vw;
   font-weight: 300;
-  font-size: 56px;
+  font-size: 24px;
   position: relative;
-  color: #fff;
   display: inline-block;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  color: #B2B2B2;
 }
 
 .about_content {
